# Parallel-Algorithms

./: CMakeLists.txt  README.md
Algorithms_lib/: AddThreeIntegersAlgorithm.h  AddTwoIntegersAlgorithm.h  CMakeLists.txt  MultiplyTwoIntegersAlgorithm.h  MultiplyTwoIntegersAlgorithmTest.h  Utils.h
Google_tests/: AddThreeIntegersAlgorithmTest.cpp  AddTwoIntegersAlgorithmTest.cpp  CMakeLists.txt  MultiplyTwoIntegersAlgorithmTest.cpp  UtilsTest.cpp
Google_tests/googletest/: MultiplyTwoIntegersAlgorithm.cpp
Google_tests/googletest/googlemock/include/gmock/: gmock-spec-builders.h
Google_tests/googletest/googletest/samples/: sample1_unittest.cc
